--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
+  "rootDirectory": "frontend",
   "buildCommand": "npm run build",
-  "outputDirectory": "frontend/dist",
+  "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": "vite",
   "rewrites": [
@@ -10,7 +11,7 @@
     }
   ],
   "functions": {
-    "frontend/dist/**/*.html": {
+    "dist/**/*.html": {
       "maxDuration": 10
     }
   }
