--- a/backend/env.example
+++ b/backend/env.example
@@ -4,7 +4,12 @@ HOST=localhost
 NODE_ENV=development
 
 # CORS Configuration
+# For development
 CORS_ORIGIN=http://localhost:5173
+
+# For production deployment, update with your frontend domain
+# Example:
+# CORS_ORIGIN=https://your-frontend-domain.vercel.app
 
 # Logging Configuration
 LOG_LEVEL=info
